Time: 138 ms (5.07%), Space: 168.4 MB (5.01%) - LeetHub